--- a/schemas/codegen/labels.codegen.v0.0.1.yaml
+++ b/schemas/codegen/labels.codegen.v0.0.1.yaml
@@ -10,15 +10,15 @@ mappings:
         "integer": "int64"
         "number": "float64"
 models:
-    -   $ref: https://www.boundedinfinity.com/schema/label/simple
+    -   $ref: https://www.boundedinfinity.com/schema/label/label
 # operations:
 #     -   name: AddLabel
 #         input: 
 #             name: request
-#             $ref: https://www.boundedinfinity.com/schema/label/simple-add-request
+#             $ref: https://www.boundedinfinity.com/schema/label/label-add-request
 #         output: 
 #             name: response
-#             $ref: https://www.boundedinfinity.com/schema/label/simple-add-response
+#             $ref: https://www.boundedinfinity.com/schema/label/label-add-response
 templates:
     files:
         -   name: file://../../templates/go/server/echo/gotmpl/model/model.go.gotmpl
