--- a/operations/avatar-operations.codegen.yaml
+++ b/operations/avatar-operations.codegen.yaml
@@ -12,12 +12,12 @@ operations:
         input: https://www.boundedinfinity.com/schema/label/label-delete-request
         output: https://www.boundedinfinity.com/schema/label/label-delete-response
 
-    -   name: labeled-value-get
-        input: https://www.boundedinfinity.com/schema/label/labeled-value-get-request
-        output: https://www.boundedinfinity.com/schema/label/labeled-value-get-response
-    -   name: labeled-value-add
-        input: https://www.boundedinfinity.com/schema/label/labeled-value-add-request
-        output: https://www.boundedinfinity.com/schema/label/labeled-value-add-response
-    -   name: labeled-value-delete
-        input: https://www.boundedinfinity.com/schema/label/labeled-value-delete-request
-        output: https://www.boundedinfinity.com/schema/label/labeled-value-delete-response
+    # -   name: labeled-value-get
+    #     input: https://www.boundedinfinity.com/schema/label/labeled-value-get-request
+    #     output: https://www.boundedinfinity.com/schema/label/labeled-value-get-response
+    # -   name: labeled-value-add
+    #     input: https://www.boundedinfinity.com/schema/label/labeled-value-add-request
+    #     output: https://www.boundedinfinity.com/schema/label/labeled-value-add-response
+    # -   name: labeled-value-delete
+    #     input: https://www.boundedinfinity.com/schema/label/labeled-value-delete-request
+    #     output: https://www.boundedinfinity.com/schema/label/labeled-value-delete-response
