--- a/schemas/people/suffix.data.yaml
+++ b/schemas/people/suffix.data.yaml
@@ -5,25 +5,19 @@
 
 -   id:  https://www.boundedinfinity.com/schema/people/suffix/ba
     title: Bachelor of Arts
-    abbreviation: BA
-    description: |
+    abbreviations: 
+        -   BA
+        -   AB
+    description: >
         A degree from a university or other higher learning instituion awarded 
         for an undergraduate program in the arts or other disciplines.
--   id:  https://www.boundedinfinity.com/schema/people/suffix/ab
-    abbreviation: AB
-    $ref: https://www.boundedinfinity.com/schema/people/suffix/ba
 -   id:  https://www.boundedinfinity.com/schema/people/suffix/bs
     title: Bachelor of Science
-    abbreviation: BA
-    description: |
+    abbreviations: 
+        -   BS
+        -   B.Sc.
+        -   SB
+        -   ScB
+    description: >
         A degree from a university or other higher learning instituion awarded
         for an undergraduate program in the sciences.
--   id:  https://www.boundedinfinity.com/schema/people/suffix/bsc
-    abbreviation: B.Sc.
-    $ref: https://www.boundedinfinity.com/schema/people/suffix/bs
--   id:  https://www.boundedinfinity.com/schema/people/suffix/sb
-    abbreviation: SB
-    $ref: https://www.boundedinfinity.com/schema/people/suffix/sb
--   id:  https://www.boundedinfinity.com/schema/people/suffix/scb
-    abbreviation: ScB
-    $ref: https://www.boundedinfinity.com/schema/people/scb
