--- a/json-schema/bookkeeping/account.data.yaml
+++ b/json-schema/bookkeeping/account.data.yaml
@@ -1,20 +1,31 @@
 -   name: Owns
+    description: Increased by Debits
     id: https://www.boundedinfinity.com/schema/bookkeeping/account/owns
 -   name: Owes
+    description: Increased by Credits
     id: https://www.boundedinfinity.com/schema/bookkeeping/account/owns
--   name: Asset
-    id: https://www.boundedinfinity.com/schema/bookkeeping/account/asset
+-   name: Assets
+    id: https://www.boundedinfinity.com/schema/bookkeeping/account/assets
     description: |
       Anything that has current or future economic value to a business.
     parent: https://www.boundedinfinity.com/schema/bookkeeping/account/owns
--   name: Liability
-    id: https://www.boundedinfinity.com/schema/bookkeeping/account/liability
+-   name: Liabilities
+    id: https://www.boundedinfinity.com/schema/bookkeeping/account/liabilities
     description: |
       A liability is a present or future obligation of an entity to transfer 
       an economic benefit.
     parent: https://www.boundedinfinity.com/schema/bookkeeping/account/owes
--   name: Equity
-    id: https://www.boundedinfinity.com/schema/bookkeeping/account/equity
+-   name: Owner's Equity
+    id: https://www.boundedinfinity.com/schema/bookkeeping/account/owners-equity
     description: |
       The value attributable to the owners of a business.
     parent: https://www.boundedinfinity.com/schema/bookkeeping/account/owes
+-   name: Expenses
+    id: https://www.boundedinfinity.com/schema/bookkeeping/account/expenses
+    parent: https://www.boundedinfinity.com/schema/bookkeeping/account/owns
+-   name: Revenues
+    id: https://www.boundedinfinity.com/schema/bookkeeping/account/revenues
+    parent: https://www.boundedinfinity.com/schema/bookkeeping/account/owes
+-   name: Dividends
+    id: https://www.boundedinfinity.com/schema/bookkeeping/account/dividends
+    parent: https://www.boundedinfinity.com/schema/bookkeeping/account/owns
