--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
-            "name": "ISO Currency Code Generator",
+            "name": "ISO Generator",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "cwd": "${workspaceFolder}/lang/go",
-            "program": "${workspaceFolder}/lang/go/idiomatic/currency/internal/main/gen.go"
+            "program": "${workspaceFolder}/lang/go/idiomatic/specification/iso/gen"
         }
     ]
 }
