--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,19 @@
             "fileMatch": ["**/*.enum.json"],
             "url": "./.vscode/enum.schema.json"
         }
-    ]
+    ],
+    "cssvar.files": [
+        "./docs/node_modules/open-props/open-props.min.css",
+        // if you have an alternative path to where your styles are located
+        // you can add it in this array of files
+        "assets/styles/variables.css"
+      ],
+    
+      // Do not ignore node_modules css files, which is ignored by default
+      "cssvar.ignore": [],
+    
+      // add support for autocomplete in JS or JS like files
+      "cssvar.extensions": [
+        "css", "postcss", "jsx", "tsx", "svelte"
+      ]
 }
