--- a/schema/codegen-schema/util/label.canonical.yaml
+++ b/schema/codegen-schema/util/label.canonical.yaml
@@ -1,38 +1,62 @@
 types:
+    -   type-id: https://www.boundedinfinity.com/schema/util/label
+        codegen-id: object
+        description: A label
+        properties:
+            -   name: name
+                ref: https://www.boundedinfinity.com/schema/util/name-50
+            -   name: acro
+                codegen-id: array
+                items:
+                    ref: https://www.boundedinfinity.com/schema/util/name-5
+            -   name: alias
+                codegen-id: array
+                items:
+                    ref: https://www.boundedinfinity.com/schema/util/name-50
+            -   ref: https://www.boundedinfinity.com/schema/util/description
+
     -   type-id: https://www.boundedinfinity.com/schema/util/label-simple
         codegen-id: object
         description: A simple label
         properties:
-            -   name: name
-                inherit: https://www.boundedinfinity.com/schema/util/name-50
-            -   name: acro
-                inherit: https://www.boundedinfinity.com/schema/util/name-5
-            -   inherit: https://www.boundedinfinity.com/schema/util/description
+            -   ref: https://www.boundedinfinity.com/schema/util/label
     
     -   type-id: https://www.boundedinfinity.com/schema/util/label-date
         type: object
         description:  A date label
         properties:
-            -   name: name
-                inherit: https://www.boundedinfinity.com/schema/util/name-50
-            -   name: acro
-                inherit: https://www.boundedinfinity.com/schema/util/name-5
-            -   inherit: https://www.boundedinfinity.com/schema/util/description
-            -   type: date
+            -   ref: https://www.boundedinfinity.com/schema/util/label
+            -   codegen-id: object
     
-    -   type-id: https://www.boundedinfinity.com/schema/util/label-value
+    -   type-id: https://www.boundedinfinity.com/schema/util/label-integer
         type: object
-        description:  A date label
+        description:  A integer label
         properties:
-            -   name: name
-                inherit: https://www.boundedinfinity.com/schema/util/name-50
-            -   name: acro
-                inherit: https://www.boundedinfinity.com/schema/util/name-5
-            -   inherit: https://www.boundedinfinity.com/schema/util/description
-            -   type: string
+            -   ref: https://www.boundedinfinity.com/schema/util/label
+            -   codegen-id: object
 
 data:
-    -   type-id: https://www.boundedinfinity.com/schema/util/label-simple
+    -   type-id: https://www.boundedinfinity.com/schema/util/label
         name: Friends
-    -   type-id: https://www.boundedinfinity.com/schema/util/label-simple
+
+    -   type-id: https://www.boundedinfinity.com/schema/util/label
         name: Family
+
+    -   type-id: https://www.boundedinfinity.com/schema/util/label
+        name: Date of Birth
+        acro: 
+            -   DoB
+        alias:
+            -   Birth Date
+
+    -   type-id: https://www.boundedinfinity.com/schema/util/label
+        name: Date of Death
+        acro: 
+            -   DoD
+
+    -   type-id: https://www.boundedinfinity.com/schema/util/label
+        name: Date of Marriage
+        acro: 
+            -   DoD
+        alias:
+            -   Marriage Date
