--- a/schema/codegen-schema/util/label.canonical.yaml
+++ b/schema/codegen-schema/util/label.canonical.yaml
@@ -37,12 +37,27 @@ types:
 
 data:
     -   type-id: https://www.boundedinfinity.com/schema/util/label
+        id: 380F7F39-6D8C-4AD5-83E9-15180A3867D2
         name: Friends
 
     -   type-id: https://www.boundedinfinity.com/schema/util/label
+        id: 2B2218BF-A51C-431F-AE4C-BC9155AFC03A
         name: Family
 
     -   type-id: https://www.boundedinfinity.com/schema/util/label
+        id: 70908294-1021-475E-AF40-F68C058ADFC9
+        name: Work
+
+    -   type-id: https://www.boundedinfinity.com/schema/util/label
+        id: 02A91A95-D16E-49C9-B5BA-26DA8F141BDC
+        name: Home
+
+    -   type-id: https://www.boundedinfinity.com/schema/util/label
+        id: D04EBF5F-1215-44C0-AC2A-254D9A2FD55C
+        name: Tax
+
+    -   type-id: https://www.boundedinfinity.com/schema/util/label
+        id: 5D558DFB-9AFA-4D06-8104-5DC0A896309A
         name: Date of Birth
         acro: 
             -   DoB
@@ -50,13 +65,13 @@ data:
             -   Birth Date
 
     -   type-id: https://www.boundedinfinity.com/schema/util/label
+        id: 4902077D-03D7-471A-B041-37605D549688
         name: Date of Death
         acro: 
             -   DoD
 
     -   type-id: https://www.boundedinfinity.com/schema/util/label
+        id: D641D981-52FC-452D-82E7-5C9555C40F46
         name: Date of Marriage
-        acro: 
-            -   DoD
         alias:
             -   Marriage Date
