--- a/schema/codegen-schema/util/label.canonical.yaml
+++ b/schema/codegen-schema/util/label.canonical.yaml
@@ -5,14 +5,17 @@ types:
         properties:
             -   name: name
                 ref: https://www.boundedinfinity.com/schema/util/name-50
+                required: true
             -   name: acro
                 codegen-id: array
                 items:
                     ref: https://www.boundedinfinity.com/schema/util/name-5
+                    unique-items: true
             -   name: alias
                 codegen-id: array
                 items:
                     ref: https://www.boundedinfinity.com/schema/util/name-50
+                    unique-items: true
             -   ref: https://www.boundedinfinity.com/schema/util/description
 
     -   type-id: https://www.boundedinfinity.com/schema/util/label-simple
