--- a/schema/codegen-schema/people/name.canonical.yaml
+++ b/schema/codegen-schema/people/name.canonical.yaml
@@ -15,6 +15,14 @@ types:
                     type: string
                     max: 25
                     min: 1
+            -   name: middle-names
+                type: array
+                required: true
+                min: 1
+                items:
+                    type: string
+                    max: 25
+                    min: 1
             -   name: family-names
                 type: array
                 required: true
