--- a/schema/codegen-schema/auth/password.canonical.yaml
+++ b/schema/codegen-schema/auth/password.canonical.yaml
@@ -132,7 +132,7 @@ types:
 operations:
     -   id: https://www.boundedinfinity.com/canonical/auth/username-password-create
         name: create
-        input: 
-            ref: https://www.boundedinfinity.com/type/auth/username-password-create-request
-        output: 
-            ref: https://www.boundedinfinity.com/type/auth/username-password-create-response
+        inputs: 
+            - type: https://www.boundedinfinity.com/type/auth/username-password-create-request
+        outputs: 
+            - type: https://www.boundedinfinity.com/type/auth/username-password-create-response
