--- a/schema/codegen-schema/auth/password.canonical.yaml
+++ b/schema/codegen-schema/auth/password.canonical.yaml
@@ -45,7 +45,14 @@ types:
             -   type: https://www.boundedinfinity.com/canonical/id
             -   <<: *password-requirement-body
             
-    
+    -   id: https://www.boundedinfinity.com/canonical/auth/password-requirement-retrieve-request
+        description: Password requirements
+        type: object
+        properties:
+            -   name: tracking-id
+                type: https://www.boundedinfinity.com/canonical/id
+            -   <<: *password-requirement-body
+
     -   id: https://www.boundedinfinity.com/canonical/auth/password-requirement-create-request
         description: Password requirements
         type: object
