--- a/schema/codegen-schema/util/abbreviation.canonical.yaml
+++ b/schema/codegen-schema/util/abbreviation.canonical.yaml
@@ -3,22 +3,22 @@ types:
         name: abbreviation
         type: object
         properties:
-            -   type: ref
-                ref: https://www.boundedinfinity.com/canonical/util/uri-id
+            -   type: https://www.boundedinfinity.com/canonical/id
             -   name: title
+                type: string
                 min: 1
                 max: 150
                 required: true
                 description: >
                     <p>The text to which the abbreviation refers.</p>
                     <p>
-                        Any character surrounded with parentheses is used to 
-                        mark or hightlight how the text is tied to the 
-                        abbreviation.  The rendering engine can decide to 
-                        use this formation (or not) as needed for the display.
+                        Any character surrounded with parentheses is used to mark or hightlight how the text is tied 
+                        to the abbreviation.  The rendering engine can decide to use this formation (or not) as needed 
+                        for the display.
                     </p>
             -   name: abbr
                 type: array
+                unique: true
                 description: >
                     <p>The list of abbreviations for the given text.</p>
                     <p>
@@ -30,5 +30,4 @@ types:
                     max: 10
                 min: 1
                 required: true
-            -   type: ref
-                ref: https://www.boundedinfinity.com/canonical/util/description
+            -   type: https://www.boundedinfinity.com/canonical/util/description
