--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,9 @@
       // add support for autocomplete in JS or JS like files
       "cssvar.extensions": [
         "css", "postcss", "jsx", "tsx", "svelte"
-      ]
+      ],
+      "deno.enable": true,
+        "deno.lint": true,
+  "editor.formatOnSave": true,
+  "[typescript]": { "editor.defaultFormatter": "denoland.vscode-deno" }
 }
