--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,5 @@
       "deno.enable": true,
         "deno.lint": true,
   "editor.formatOnSave": true,
-  "[typescript]": { "editor.defaultFormatter": "denoland.vscode-deno" }
+  "[typescript]": { "editor.defaultFormatter": "vscode.typescript-language-features" }
 }
