port JSON schema required to canonical required

--- a/schema/codegen-schema/aa/security-qa.canonical.yaml
+++ b/schema/codegen-schema/aa/security-qa.canonical.yaml
@@ -7,10 +7,9 @@ kinds:
                 description: The security question
                 kind: string
                 max: 200
+                required: true
             -   name: answer
                 description: The security answer
                 kind: string
                 max: 200
-        required:
-            - question
-            - answer
+                required: true
