--- a/schema/codegen-schema/aa/ssh-key-pair.canonical.yaml
+++ b/schema/codegen-schema/aa/ssh-key-pair.canonical.yaml
@@ -6,13 +6,12 @@ kinds:
             -   name: public-key
                 description: The public key
                 kind: string
+                required: true
             -   name: private-key
                 description: The private key
                 kind: string
+                required: true
             -   name: algorithm
                 description: The algorithm used to generate the key
                 kind: string
-        required:
-            - public-key
-            - private-key
-            - algorithm
+                required: true
