--- a/schema/codegen-schema/aa/username-password.canonical.yaml
+++ b/schema/codegen-schema/aa/username-password.canonical.yaml
@@ -8,11 +8,10 @@ kinds:
                 kind: string
                 min: 1
                 max: 200
+                required: true
             -   name: password
                 description: The password
                 kind: string
                 min: 1
                 max: 200
-        required:
-            - username
-            - password
+                required: true
