--- a/schema/codegen-schema/hardware/cpu.canonical.yaml
+++ b/schema/codegen-schema/hardware/cpu.canonical.yaml
@@ -15,6 +15,5 @@ properties:
         description: The central processing unit (CPU) name
         kind: string
         max: 200
-        min: 2 
-required:
-    - name
+        min: 2
+        required: true
