--- a/schema/codegen-schema/banking/bank.canonical.yaml
+++ b/schema/codegen-schema/banking/bank.canonical.yaml
@@ -4,15 +4,14 @@ kind: object
 properties:
     -   name: id
         $ref: canonical://www.boundedinfinity.com/canonical/banking/bank-id
+        required: true
     -   name: name
         description: The name of the bank
         kind: string
+        required: true
     -   name: description
         description: The description of the bank
         kind: string
     -   name: routing-number
         $ref: canonical://www.boundedinfinity.com/canonical/banking/aba-rtn
-required:
-    - id
-    - name
-    - routing-number
+        required: true
