--- a/schema/codegen-schema/bookkeeping/account.canonical.yaml
+++ b/schema/codegen-schema/bookkeeping/account.canonical.yaml
@@ -5,6 +5,7 @@ properties:
     -   name: id
         description: The URL representing the ID of this account.
         kind: uri
+        required: true
     -   name: name
         description: The name of the account
         kind: string
@@ -13,15 +14,12 @@ properties:
         kind: string
     -   name: kind
         $ref: canonical://www.boundedinfinity.com/canonical/bookkeeping/account-type
+        required: true
     -   name: parent
         description: URL representing the parent ID
         kind: uri
+        required: true
     -   name: dates
         kind: array
         items:
             $ref: canonical://www.boundedinfinity.com/canonical/label/labled-datetime
-required:
-    - id
-    - name
-    - type
-    - parent
