--- a/schema/codegen-schema/bookkeeping/transaction.canonical.yaml
+++ b/schema/codegen-schema/bookkeeping/transaction.canonical.yaml
@@ -7,18 +7,17 @@ properties:
         kind: string
     -   name: debits
         kind: array
-        minItems: 1
+        min: 1
         items:
             $ref: canonical://www.boundedinfinity.com/canonical/bookkeeping/transaction-action
+        required: true
     -   name: credits
         kind: array
-        minItems: 1
+        min: 1
         items:
             $ref: canonical://www.boundedinfinity.com/canonical/bookkeeping/transaction-action
+        required: true
     -   name: labels
         kind: array
         items:
             $ref: canonical://www.boundedinfinity.com/canonical/label/label
-required:
-    - debits
-    - credits
