--- a/schema/codegen-schema/film/episode.canonical.yaml
+++ b/schema/codegen-schema/film/episode.canonical.yaml
@@ -4,6 +4,7 @@ kind: object
 properties:
     -   name: title
         kind: string
+        required: true
     -   name: sub-title
         kind: string
     -   name: actors
@@ -22,5 +23,3 @@ properties:
         kind: array
         items:
             kind: canonical://www.boundedinfinity.com/canonical/time/sdate
-required:
-    -   title
