--- a/schema/codegen-schema/telephone/nanp.canonical.yaml
+++ b/schema/codegen-schema/telephone/nanp.canonical.yaml
@@ -14,14 +14,17 @@ properties:
         description: Numbering plan area code
         kind: string
         pattern: ^[2-9]{1}[0-9]{2}$
+        required: true
     -   name: exchange-code
         description: Central office exchange code
         kind: string
         pattern: ^[2-9]{1}[0-9]{2}$
+        required: true
     -   name: line-number
         description: Line number
         kind: string
         pattern: ^[0-9]{4}$
+        required: true
     -   name: extention
         description: Extention number
         kind: string
@@ -30,7 +33,3 @@ properties:
         kind: array
         items:
             $ref: canonical://www.boundedinfinity.com/canonical/label/label
-required:
-    -   area-code
-    -   exchange-code
-    -   line-number
