--- a/schema/codegen-schema/util/geographical-location.canonical.yaml
+++ b/schema/codegen-schema/util/geographical-location.canonical.yaml
@@ -7,11 +7,10 @@ properties:
         description: The Geographical latitude
         minimum: -90
         maximum: 90
+        required: true
     -   name: longitude
         kind: number
         description: The Geographical longitude
         minimum: -90
         maximum: 90
-required:
-    -   latitude
-    -   longitude
+        required: true
